distcc-3.1 "Humming along"  2008-11-21

  FEATURES:

   * New "--scan-includes" option to distcc.  This shows which
     headers distcc would send to the remote machine in pump mode,
     without actually compiling anything.  This provides a simple
     interface to the include server.

  DOCUMENTATION:

   * Document all of the exit codes in the man page
     (Carsten Wolff <carsten@wolffcarsten.de>, via Debian).

  BUG FIXES:

   * Handle "-Wp,-MMD,...".

   * Report a better error message if a host specification contains ",cpp"
     but not ",lzo".

   * Fix a bug where the "m4" directory wasn't included in the
     source distribution tarball, which caused it to stop working
     if you ran autogen.sh.

  PORTABILITY:

   * Fixed a bug where the pump script was hard-coding /etc/distcc/hosts
     rather than using the prefix specified to configure.

   * Fixed build errors on Gentoo Linux and some other systems
     (Matsuu Takuto).


distcc-3.0 "The moment has arrived"   2008-08-06

  DOCUMENTATION:

   * Minor improvements to the man pages.

distcc-3.0rc4 "Pump up the volume"   2008-08-04

  BUG FIXES:

   * Fixed a bug in 3.0rc3 that broke pump mode for C++ compilations
     that use -I options that refer to a subdirectory of one of the
     default system include directories, e.g. -I/usr/include/foo.

distcc-3.0rc3 "Third time lucky?"   2008-07-31

  FEATURES:

   * New "--without-avahi" option to configure (Lei Zhang).

  BUG FIXES:

   * Fixed a problem where pump mode was falling back to local compilation
     when compiling with -I options that refer to a subdirectory of one
     of the default system include directories (Nils Klarlund, Fergus Henderson).

   * Allow distcc to distribute commands that use "-MF<filename>"
     rather than "-MF <filename>", and likewise for "-MT<target>".

  PORTABILITY:

   * Fixed a build problem on ARM and Solaris systems.

   * Fixed a build problem on some Linux systems reported by Daisuke Nishikawa.
